--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "xchanming/dev-tools",
+    "license": "MIT",
     "require": {
         "doctrine/sql-formatter": "^1.1",
         "fakerphp/faker": "^1.20",
@@ -7,7 +8,7 @@
         "mbezhanov/faker-provider-collection": "^2.0.1",
         "symfony/doctrine-bridge": "^5.4.7 | ^6 | ^7",
         "symfony/web-profiler-bundle": "^5.4 | ^6 | ^7",
-        "phpunit/phpunit": "^9.6 | ^10",
+        "phpunit/phpunit": "^9.6 | ^10 | ^11.4 | ^12",
         "symfony/browser-kit": "^5.4 | ^6 | ^7"
     }
 }
